educonnect-gitops/charts/templates/external-secrets-sa.yml
apiVersion: v1
kind: Namespace
metadata:
  name: external-secrets
