educonnect-gitops/charts/templates/service.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
  namespace: backend

spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
